[gd_scene load_steps=5 format=3 uid="uid://dhd6a6auaqohd"]

[ext_resource type="Script" path="res://scenes/level.gd" id="1_6idde"]
[ext_resource type="Texture2D" uid="uid://imarlerl1ow4" path="res://art/milky-way.jpg" id="2_r56mu"]
[ext_resource type="PackedScene" uid="uid://du16h7w8cu6rg" path="res://scenes/user_interface.tscn" id="4_saxq1"]

[sub_resource type="Curve2D" id="Curve2D_3ao1m"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -148, -140.713, 0, 0, 0, 0, 1989, -138.713, 0, 0, 0, 0, 2002, 1139.29, 0, 0, 0, 0, -144, 1131.29, 0, 0, 0, 0, -147, -113.713, 0, 0, 0, 0, -148, -140.713)
}
point_count = 6

[node name="Level" type="Node2D" groups=["Asteroids"]]
process_mode = 1
script = ExtResource("1_6idde")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(939, 516)
scale = Vector2(1.17573, 1.17164)
texture = ExtResource("2_r56mu")

[node name="AsteroidPath" type="Path2D" parent="."]
position = Vector2(39, 27.7126)
curve = SubResource("Curve2D_3ao1m")

[node name="AsteroidPathFollow2D" type="PathFollow2D" parent="AsteroidPath"]
position = Vector2(-148, -140.713)
rotation = 0.000935891

[node name="AsteroidSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="NextLevelTimer" type="Timer" parent="."]

[node name="ReadyTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="GameOverTimer" type="Timer" parent="."]

[node name="UI" parent="." instance=ExtResource("4_saxq1")]

[connection signal="timeout" from="AsteroidSpawnTimer" to="." method="_on_asteroid_spawn_timer_timeout"]
[connection signal="timeout" from="NextLevelTimer" to="." method="_on_next_level_timer_timeout"]
[connection signal="timeout" from="ReadyTimer" to="." method="_on_ready_timer_timeout"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]
